-menyelesaikan nav -menyelesaikan profile picture -menambahkan content ---sum: content-header inprogress

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/fontawesome/css/all.css">
     <title>Atika Najla - Porfolio</title>
 </head>
 <body>
@@ -15,13 +16,42 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <div class="site-logo">logo</div>
-                <div class="navbar">navbar</div>
-                <div class="toggle-menu">toggle</div>
+                <div class="site-logo">Porfolio</div>
+                <ul class="navbar">
+                    <div class="icon">
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <li><a href="">About Me</a></li>
+                    <li class="cta-btn btn"><a href="">My CV <i class="fas fa-arrow-down"></i></a></li>
+                </ul>
+                <div class="toggle-menu">
+                    <i class="icon fa fa-solid fa-bars"></i>
+                </div>
             </nav>
             <article class="header-content">
-                <div class="author-pic">IMG</div>
-                <div class="content">content</div>
+                <div class="author-pic">
+                    <div class="author-pic__wrapper">
+                        <div class="author-pic__inner">
+                            <img src="/img/atika.png" alt="">
+                            <h2>Atika Najla</h2>
+                            <p>Front End Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="content__wrapper">
+                        <h3>Hello, i'am</h3>
+                        <h1>Atika Najla</h1>
+                        <h3>Frontend Developer</h3>
+                        <p>A long life learner, design enthusiast,</p>
+                        <p>why not interesting, someone with awesome heart!</p>
+                        <ul class="content__sm">
+                            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+                            <li><a href=""><i class="far fa-envelope"></i></a></li>
+                            <li><a href=""><i class="fab fa-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </article>
             <div class="scroll">
                 <p>scroll</p>
