-menambahkan content header pada about me section -memambahkan style pada aboutme_button -menambahkan fungsi js pada aboutme_button -menambahkan fungsi js pada toggle button di navbar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
     <!-- ABOUT -->
     <!-- ------------------------ -->
     <section class="about container container-center">
-        <div class="about-header">HEADER</div>
+        <div class="about__header">
+            <h1>Project & Skills</h1>
+            <p>Check out my project and skill!</p>
+            <div class="about__button">
+                <button class="portfolio-btn active">Project</button>
+                <button class="skill-btn">Skills</button>
+            </div>
+        </div>
         <article class="portfolio">
             <div class="card">CARD</div>
             <div class="card">CARD</div>
@@ -95,6 +102,8 @@
             <h1>FOOTER</h1>
         </div>
     </section>
+
+    <script src="app.js"></script>
     
 </body>
 </html>
