menambahkan wrapper pada porfolio card menambahkan header pada porfolio section

--- a/index.html
+++ b/index.html
@@ -73,30 +73,30 @@
             </div>
         </div>
         <article class="portfolio">
-            <div class="card">
-                <div class="card__image">
-                    <img src="./img/waroeng-ss.PNG" alt="">
-                </div>
-                <div class="card__info">
-                    <h3>Foodbook Website</h3>
-                    <p>Static landing page website restoran. Re-create & re-design website Waroeng SS. </p>
-                    <div class="card__info-tag">
-                        <span>#HTML</span>
-                        <span>#CSS</span>
-                        <span>#Javasript</span>
+            <h2>Portfolio</h2>
+            <div class="wrapper">
+                <div class="card">
+                    <div class="card__image">
+                        <img src="./img/waroeng-ss.PNG" alt="">
+                    </div>
+                    <div class="card__info">
+                        <h3>Foodbook Website</h3>
+                        <p>Static landing page website restoran. Re-create & re-design website Waroeng SS. </p>
+                        <div class="card__info-tag">
+                            <span>#HTML</span>
+                            <span>#CSS</span>
+                            <span>#Javasript</span>
+                        </div>
+                    </div>
+                    <div class="card__btn">
+                        <a href="https://gilded-nougat-bcb795.netlify.app/" class="btn btn-primary btn-dark">Demo Website</a>
+                        <a href="https://github.com/atikanajla/Foodbook" class="btn btn-primary btn-dark">Code</a>
                     </div>
                 </div>
-                <div class="card__btn">
-                    <a href="https://gilded-nougat-bcb795.netlify.app/" class="btn btn-primary btn-dark">Demo Website</a>
-                    <a href="https://github.com/atikanajla/Foodbook" class="btn btn-primary btn-dark">Code</a>
-                </div>
-            <!-- </div>
-            <div class="card">CARD</div>
-            <div class="card">CARD</div>
-            <div class="card">CARD</div> -->
+            </div>
         </article>
         <article class="skill hide">
-            <h1>skill</h1>
+            <h1>skills</h1>
         </article>
     </section>
 
