--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <article class="portfolio">
             <h2>Portfolio</h2>
-            <div class="wrapper">
+            <div class="portfolio-wrapper">
                 <div class="card">
                     <div class="card__image">
                         <img src="./img/waroeng-ss.PNG" alt="">
@@ -96,7 +96,8 @@
             </div>
         </article>
         <article class="skill hide">
-            <h1>skills</h1>
+            <h2>Skills</h2>
+            .
         </article>
     </section>
 
