finish cfa section

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
     <!-- ------------------------ -->
     <section class="cfa container-center">
         <div class="container">
-            <h2>h2</h2>
-            <h3>h3</h3>
-            <a href="">link</a>
+            <h2 class="">Start a project</h2>
+            <h3 class="px-10">Interested in working together? We should queue up a chat. I’ll buy the coffee.</h3>
+            <a href="" class="cfa__link">Lets do this</a>
         </div>
     </section>
 
