finish footer section

--- a/index.html
+++ b/index.html
@@ -165,11 +165,29 @@
     <!-- ------------------------ -->
     <!-- FOOTER -->
     <!-- ------------------------ -->
-    <section class="footer">
-        <div class="container">
-            <h1>FOOTER</h1>
+    <footer class="footer">
+        <div class="container container-center">
+            <div class="footer__header">
+                <h3>Atika Najla</h3>
+            </div>
+            <div class="footer__contact">
+                <h4>Contact Me</h4>
+                <ul>
+                    <li><a href="">Whatsapp</a></li>
+                    <li><a href="">Telegram</a></li>
+                    <li><a href="">Email</a></li>
+                </ul>
+            </div>
+            <div class="footer__socmed">
+                <h4>Find Me</h4>
+                <ul>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Linked In</a></li>
+                    <li><a href="">Github</a></li>
+                </ul>
+            </div>
         </div>
-    </section>
+    </footer>
 
     <script src="app.js"></script>
     
