add IMBD website card in portfolio

--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
                         <a href="https://github.com/atikanajla/Foodbook" class="btn btn-primary btn-dark">Code</a>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card__image">
+                        <img src="./img/imdb website.PNG" alt="">
+                    </div>
+                    <div class="card__info">
+                        <h3>IMDB Website</h3>
+                        <p>Clone IMDB website with some feature. </p>
+                        <div class="card__info-tag">
+                            <span>#HTML</span>
+                            <span>#CSS</span>
+                            <span>#Javasript</span>
+                            <span>#ReactJS</span>
+                        </div>
+                    </div>
+                    <div class="card__btn">
+                        <a href="https://gilded-nougat-bcb795.netlify.app/" class="btn btn-primary btn-dark">Demo Website</a>
+                        <a href="https://github.com/atikanajla/Foodbook" class="btn btn-primary btn-dark">Code</a>
+                    </div>
+                </div>
             </div>
         </article>
         <article class="skill hide">
