--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <!-- ------------------------ -->
     <section class="about container container-center">
         <div class="about__header">
-            <h1>Project & Skills</h1>
+            <h2>Project & Skills</h2>
             <p>Check out my project and skill!</p>
             <div class="about__button">
-                <button class="portfolio-btn">Project</button>
-                <button class="skill-btn active">Skills</button>
+                <button class="portfolio-btn active">Project</button>
+                <button class="skill-btn">Skills</button>
             </div>
         </div>
-        <article class="portfolio hide">
+        <article class="portfolio">
             <div class="article-header">
-                <h2>Portfolio</h2>
+                <h3>Portfolio</h3>
             </div>
             <div class="portfolio-wrapper">
                 <div class="card">
@@ -116,9 +116,9 @@
                 </div>
             </div>
         </article>
-        <article class="skill">
+        <article class="skill hide">
             <div class="article-header">
-                <h2>Skills</h2>
+                <h3>Skills</h3>
             </div>
             <div class="skill__wrapper">
                 <div class="skill__row skill-checklist">
