menambahkan link socmed & contact

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <p>A long life learner, design enthusiast,</p>
                         <p>why not interesting, someone with awesome heart!</p>
                         <ul class="content__sm">
-                            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
-                            <li><a href=""><i class="far fa-envelope"></i></a></li>
-                            <li><a href=""><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://wa.me/6289525958654"><i class="fab fa-whatsapp"></i></a></li>
+                            <li><a href="mailto:aku.najla@gmail.com"><i class="far fa-envelope"></i></a></li>
+                            <li><a href="https://github.com/atikanajla"><i class="fab fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -192,17 +192,17 @@
             <div class="footer__contact">
                 <h4>Contact Me</h4>
                 <ul>
-                    <li><a href="">Whatsapp</a></li>
-                    <li><a href="">Telegram</a></li>
-                    <li><a href="">Email</a></li>
+                    <li><a href="https://wa.me/6289525958654">Whatsapp</a></li>
+                    <li><a href="https://t.me/atikanajla8853">Telegram</a></li>
+                    <li><a href="mailto:aku.najla@gmail.com">Email</a></li>
                 </ul>
             </div>
             <div class="footer__socmed">
                 <h4>Find Me</h4>
                 <ul>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Linked In</a></li>
-                    <li><a href="">Github</a></li>
+                    <li><a href="https://instagram.com/atikanajla">Instagram</a></li>
+                    <li><a href="https://linkedin.com/atikanajla">Linked In</a></li>
+                    <li><a href="https://github.com/atikanajla">Github</a></li>
                 </ul>
             </div>
         </div>
