--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         </div>
                     </div>
                     <div class="card__btn">
-                        <a href="https://gilded-nougat-bcb795.netlify.app/" class="btn btn-primary btn-dark">Demo Website</a>
-                        <a href="https://github.com/atikanajla/Foodbook" class="btn btn-primary btn-dark">Code</a>
+                        <a href="https://https://magnificent-fudge-5dc1eb.netlify.app//" class="btn btn-primary btn-dark">Demo Website</a>
+                        <a href="https://github.com/atikanajla/movie-website-v2" class="btn btn-primary btn-dark">Code</a>
                     </div>
                 </div>
             </div>
