Update link ke portfolio IMDb Website

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="card__btn">
-                        <a href="https://https://magnificent-fudge-5dc1eb.netlify.app//" class="btn btn-primary btn-dark">Demo Website</a>
+                        <a href="https://magnificent-fudge-5dc1eb.netlify.app/" class="btn btn-primary btn-dark">Demo Website</a>
                         <a href="https://github.com/atikanajla/movie-website-v2" class="btn btn-primary btn-dark">Code</a>
                     </div>
                 </div>
